// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert editor interactions > loads populated alert and registry fixture data 1`] = `
{
  "actionEditors": [
    {
      "role": "triggers-yaml-editor",
      "value": "- trigger: state
  entity_id: binary_sensor.front_door
",
    },
    {
      "role": "conditions-yaml-editor",
      "value": "- condition: state
  entity_id: binary_sensor.front_door
  state: on
  for: 00:05:00
",
    },
    {
      "role": "post-send-actions",
      "value": "- action: logbook.log
  data:
    name: Front door alert
",
    },
    {
      "role": "post-confirmation-actions",
      "value": "- action: light.turn_on
  target:
    entity_id:
      - light.hall
",
    },
  ],
  "conditionRows": 0,
  "confirmationEnabled": true,
  "intervalEnabled": false,
  "name": "Front door open",
  "selectedRecipients": [
    "Main phoneRemove",
    "PhoneRemove",
  ],
}
`;

exports[`alert editor interactions > previews unsaved data without requiring recipients 1`] = `
"id: draft_alert
name: Draft alert
enabled: true
description: ""
icon: mdi:bell-outline
triggers: []
conditions: []
automation_mode: parallel
notification:
  target: {}
  data:
    title: ""
    message: ""
confirmation:
  enabled: false
  buttons:
    - id: confirm
      label: Done
  notification:
    enabled: false
    data:
      message: ""
  reminders:
    enabled: false
    interval: 1800
    max_attempts: 5
    show_attempts: false
    forget_after_enabled: false
    timeout: 900
  actions: []
"
`;

exports[`alert editor interactions > renders the Basic editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-input",
    "ha-selector:Description",
    "ha-icon-picker:Icon",
  ],
  "help": [],
  "title": "Basic",
}
`;

exports[`alert editor interactions > renders the Conditions editor section 1`] = `
{
  "buttons": [
    "More information",
    "More information",
    "YAML",
    "Visual",
  ],
  "controls": [
    "ha-switch:Check at startup",
    "ha-switch:Enable periodic condition checks:interval-toggle",
    "ha-notifications-duration-input:Re-evaluate conditions every",
    "ha-notifications-code-editor:Conditions:yaml:conditions-yaml-editor",
  ],
  "help": [
    "Re-check conditions at this interval, even when no relevant entity-change event occurs.",
    "Conditions are optional and gate every trigger, including startup, periodic checks, and custom event triggers. With the condition-change trigger enabled, referenced entities also create triggers automatically. With no conditions, the alert runs whenever another trigger fires. YAML and JSON are supported. For numeric_state, include at least one of above or below. Home Assistant's numeric_state condition does not support for; use a state condition when you need a duration.",
  ],
  "title": "Conditions",
}
`;

exports[`alert editor interactions > renders the Confirmation editor section 1`] = `
{
  "buttons": [
    "More information",
    "Add response button",
  ],
  "controls": [
    "ha-switch:Enable confirmation timeout",
    "ha-input",
    "ha-input",
    "ha-switch",
  ],
  "help": [
    "Set how long the confirmation notification stays active on recipients' devices. This does not change the reminder interval or maximum reminders.",
  ],
  "title": "Confirmation",
}
`;

exports[`alert editor interactions > renders the Notification editor section 1`] = `
{
  "buttons": [
    "Message template help",
  ],
  "controls": [
    "ha-input",
    "ha-notifications-code-editor:Notification message:jinja2",
  ],
  "help": [
    "Use condition results Add an ID to a condition, then use condition.<id> to show text based on its result. {% if condition.front_door %}Door open{% else %}All clear{% endif %} Available values alert_id, alert_name, alert_active, attempt, trigger, now, and condition.<id>. Home Assistant templates State helpers work here too, such as states('sensor.temperature'), state_attr('light.kitchen', 'brightness'), and is_state('binary_sensor.door', 'on').",
  ],
  "title": "Notification",
}
`;

exports[`alert editor interactions > renders the Notify recipients when confirmed editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-code-editor:Confirmation message:jinja2",
  ],
  "help": [],
  "title": "Notify recipients when confirmed",
}
`;

exports[`alert editor interactions > renders the Post-confirmation actions editor section 1`] = `
{
  "buttons": [
    "YAML",
    "Visual",
  ],
  "controls": [
    "ha-notifications-code-editor:Post-confirmation actions:yaml:post-confirmation-actions",
  ],
  "help": [],
  "title": "Post-confirmation actions",
}
`;

exports[`alert editor interactions > renders the Post-send actions editor section 1`] = `
{
  "buttons": [
    "YAML",
    "Visual",
  ],
  "controls": [
    "ha-notifications-code-editor:Post-send actions:yaml:post-send-actions",
  ],
  "help": [],
  "title": "Post-send actions",
}
`;

exports[`alert editor interactions > renders the Recipients editor section 1`] = `
{
  "buttons": [
    "All",
    "Devices",
    "Areas",
    "Floors",
    "Labels",
    "Notification entities",
    "Users",
    "More information",
  ],
  "controls": [
    "ha-input",
  ],
  "help": [
    "Search for a recipient, choose a type when needed, then select it. You can mix devices, areas, labels, floors, and notification entities. Selected devices, areas, labels, floors, and notification entities are passed to Home Assistant's standard Notify service.",
  ],
  "title": "Recipients",
}
`;

exports[`alert editor interactions > renders the Reminder policy editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-switch:Show attempt count in notification title",
    "ha-notifications-duration-input:Remind every",
    "ha-input",
  ],
  "help": [],
  "title": "Reminder policy",
}
`;

exports[`alert editor interactions > renders the Triggers editor section 1`] = `
{
  "buttons": [
    "More information",
    "More information",
    "YAML",
    "Visual",
  ],
  "controls": [
    "ha-switch:When conditions change",
    "ha-notifications-code-editor:Triggers:yaml:triggers-yaml-editor",
  ],
  "help": [
    "Automatically trigger from entities referenced by Conditions. Entity-backed template conditions are watched too; static templates need a startup or periodic check, or a custom trigger.",
    "Optional. Add event or state triggers as YAML when those events should start the alert. Startup and periodic checks are configured separately. Include each custom trigger as an item in a YAML list; common types include state, event, and template triggers.",
  ],
  "title": "Triggers",
}
`;

exports[`alert editor interactions > renders the When to run editor section 1`] = `
{
  "buttons": [
    "More information",
    "More information",
  ],
  "controls": [
    "ha-switch:Cancel on inactive",
    "ha-selector:Automation mode:automation-mode",
  ],
  "help": [
    "Cancel confirmation waits when Conditions become false or a configured on/off state trigger reaches its inverse state.",
    "Parallel is usually the best choice for alerts because each trigger can start an independent run. Keep this setting unless you specifically need to ignore, restart, or queue runs.",
  ],
  "title": "When to run",
}
`;

exports[`alert editor interactions > saves an edited alert and closes the editor 1`] = `
{
  "automation_mode": "parallel",
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "Done",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "enabled": false,
    },
    "reminders": {
      "enabled": false,
      "forget_after_enabled": false,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
      "timeout": 900,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "editable_alert",
  "name": "Updated name",
  "notification": {
    "action": "notify.phone",
    "data": {
      "message": "",
      "title": "",
    },
    "target": {
      "entity_id": [
        "notify.phone",
      ],
    },
  },
  "triggers": [],
}
`;

exports[`alert editor interactions > shows validation feedback instead of saving an unnamed alert 1`] = `
"<div class="nc-toast">
          Name is required.
        </div>"
`;

exports[`alert editor interactions > switches active sections and keeps the contextual title 1`] = `"<h2 data-role="editor-section-title">When to run</h2>"`;

exports[`recipient picker interactions > filters recipients and removes a selected target 1`] = `
{
  "entity_id": [
    "notify.tablet",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 1`] = `
{
  "entity_id": [
    "notify.phone",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 2`] = `"<span class="nc-target-chip" title="Notification entities">Phone<button class="nc-chip-remove">Remove</button></span>"`;
